--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0;
+}
 .secondary {
     background: #999;
     color: white;
@@ -5,3 +8,20 @@
 
 #idspecial {
 }
+nav ul {
+    margin: 5;
+}
+
+nav ul li {
+    list-style-type: none;
+    display: inline-block;
+
+
+}
+.col {
+    background: #999;
+    float: left;
+    margin: 1%;
+    padding: 5px;
+}
+
